#18 fixed overflow in buttons

--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -87,7 +87,7 @@
   }
 
   &__wrapper-short {
-    max-width: 14.2857rem;
+    max-width: fit-content;
     width: max-content;
     min-height: 2.4286rem;
     height: min-content;
